[package]
name = "richdiff"
version = "0.1.0"
authors = ["Jim Berlage <james.berlage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
csv = "1"
handlebars = "3"
itertools = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"